      included automatically, so there's no need to put those "include"
      lines at the top of your scripts file [Ralph]
    * "get/set active battle pause on all menus" [James]
    * "dissolve sprite", "cancel dissolve", "sprite is dissolving",
      "wait for dissolve" [James]
    * "running on desktop", "running on mobile", "running on console",
      "show virtual gamepad", "hide virtual gamepad",
      "auto virtual gamepad" [James]
    * "get horiz align", "get vert align", "get horiz anchor",
      "get vert anchor" [James]
    * "create select" "slice is select" "set slice select index"
      "get slice select index" "slice child index" [James]
    * "create scroll" "slice is scroll" "set scroll bar style"
      "get scroll bar style" "set scroll check depth"
      "get scroll check depth" "scroll to child" [James]

  * Performance Fixes
    * Fixed delay when opening a menu that happened when a large number
      of menus were defined [Ralph]
    * HSpeak was extremely slow (potentially hours) at reading files
      with DOS/Windows line-endings on Linux/Mac [Ralph]
    * The script intrepeter was running tight loops much (eg 2x) slower
      than it used to before Beelzebufo [Ralph]
    * Creating or reparenting thousands of slices was slow [Ralph]

  * Stuff Only Developers Will Notice
    * Experimental support for Android phones and tablets
    * Experimental support for the OUYA Console, Gamestick Console,
      Fire TV Console
    * Experimental support for the Raspberry Pi

April 9 2013 [Beelzebufo]

  * New Features
    * General preference bitset "Don't reset max stats after OOB attack"
      to prevent stat maximum values from being altered by attacks and
      items outside of battle [Ralph]
    * Max tag is now 15999 instead of 999 [James]
    * Max NPC onetime tag is now 15999 instead of 1000 [James]
    * A bunch of attack bitsets have moved into the Attack Damage
      Settings Menu, which now dynamically hides settings and bitsets